[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "wv-cli"
version = "0.1.1"
description = "CLI scaffold tool for pywebview + Vue3 desktop apps"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "toml>=0.10",
]

[project.scripts]
wv = "wv_cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["wv_cli*"]

[tool.setuptools.package-data]
wv_cli = ["icon/*.ico", "icon/*.png"]